--- a/make.ini
+++ b/make.ini
@@ -26,6 +26,7 @@ EditPackages=XAdmin
 EditPackages=XWebAdmin
 EditPackages=Vehicles
 EditPackages=wUtils
+EditPackages=Ladder1beta
 EditPackages=UTelAdSE
 
 [Core.System]
