--- a/make.ini
+++ b/make.ini
@@ -25,7 +25,7 @@ EditPackages=XInterface
 EditPackages=XAdmin
 EditPackages=XWebAdmin
 EditPackages=Vehicles
-EditPackages=wUtils
+EditPackages=wUtils103
 EditPackages=UTelAdSE
 
 [Core.System]
