colorise + telnet protocol

--- a/make.ini
+++ b/make.ini
@@ -26,6 +26,7 @@ EditPackages=XAdmin
 EditPackages=XWebAdmin
 EditPackages=Vehicles
 EditPackages=wUtils103
+EditPackages=ConfigMaster
 EditPackages=UTelAdSE
 
 [Core.System]
